Paypal integration complete

--- a/src/components/header/header.html
+++ b/src/components/header/header.html
@@ -6,7 +6,7 @@
       <ion-icon color="dark" name="ios-menu-outline"></ion-icon>
      </button>
 </ion-buttons>
-    <ion-title>Find Jobs</ion-title>
+    <ion-title>{{title}}</ion-title>
     <ion-buttons end>
     <button ion-button icon-only>
       <ion-icon color="dark" name="ios-notifications-outline"></ion-icon>
