--- a/src/pages/job/job.scss
+++ b/src/pages/job/job.scss
@@ -5,4 +5,10 @@ page-job {
         padding: .4em;
     }
 
+    
+    button.back-button {
+        -webkit-transform: none !important; 
+         transform: none !important; 
+    }
+
 }
