--- a/src/components/events/events.html
+++ b/src/components/events/events.html
@@ -2,7 +2,7 @@
   <ion-row align-items-stretch *ngFor="let eventVM of eventVMList" >
     <ion-col col-6 ion-self-stretch *ngFor="let event of eventVM.events">
         <ion-card>
-        <ion-card-content>
+        <ion-card-content (click)="openEvent(event)">
             <img src="{{event.imageUrl}}" />
             
             <div class="event-text" >
