--- a/src/pages/event/event.scss
+++ b/src/pages/event/event.scss
@@ -1,3 +1,19 @@
-page-event {
+// @import "../../theme/variables";
 
+page-event {
+    .event-type {
+        border-radius: 3px;
+        color: map-get($map: $colors, $key: primary);
+        border: solix 1px map-get($map: $colors, $key: primary);
+        
+    }
+
+    .event-name {
+        font-size: 18px;
+        font-weight: 600;
+    }
+    button.back-button {
+        -webkit-transform: none !important; 
+         transform: none !important; 
+    }
 }
