--- a/src/components/events/events.scss
+++ b/src/components/events/events.scss
@@ -1,12 +1,29 @@
 events-feed {
     .card {
-        margin: 5px !important;
+        margin: 0 !important;
         width: calc(100% - 8px) !important;
         height: 100% !important;
         border-radius: 5px !important;
         border: none !important;
         color:  white !important;
-        background-color: #afaeae;
+        background-color: #605f60;
+    }
+
+    ion-grid {
+        padding: 0 !important;
+
+    }
+
+    ion-col {
+        line-height: 1 !important;
+        height: auto !important;
+        padding-left: 3px !important;
+        padding-right: 0 !important;
+        padding-top: 5px !important;
+    }
+
+    .description {
+        font-style:italic;
     }
 
     .card-content {
@@ -18,8 +35,10 @@ events-feed {
         .event-name {
             font-size: 17px;
             font-weight: 700px;
-            max-width: 50%;
+            // max-width: 50%;
             overflow: hidden;
+            font-weight: 700;
+            padding-left: 0;
         }
 
         .capacity {
@@ -29,6 +48,7 @@ events-feed {
             border: solid 2px white;
             border-radius: 50%;
             padding: 5px;
+            vertical-align: middle;
         }
 
         .toolbar-title {
