--- a/src/pages/favorite-events/favorite-events.scss
+++ b/src/pages/favorite-events/favorite-events.scss
@@ -1,3 +1,72 @@
 page-favorite-events {
-
+        .card {
+            margin: 0 !important;
+            width: calc(100% - 8px) !important;
+            height: 100% !important;
+            border-radius: 5px !important;
+            border: none !important;
+            color:  white !important;
+            background-color: #605f60;
+        }
+    
+        ion-grid {
+            padding: 0 !important;
+    
+        }
+    
+        ion-col {
+            line-height: 1 !important;
+            height: auto !important;
+            padding-left: 3px !important;
+            padding-right: 0 !important;
+            padding-top: 5px !important;
+        }
+    
+        .description {
+            font-style:italic;
+        }
+    
+        .card-content {
+            padding: 0 !important;
+            height: 100% !important;
+            border-top-left-radius: 5px !important;
+            border-top-right-radius: 5px !important;
+    
+            .event-name {
+                font-size: 17px;
+                font-weight: 700px;
+                // max-width: 50%;
+                overflow: hidden;
+                font-weight: 700;
+                padding-left: 0;
+            }
+    
+            .capacity {
+                float: right;
+                width: 36px;
+                text-align: center;
+                border: solid 2px white;
+                border-radius: 50%;
+                padding: 5px;
+                vertical-align: middle;
+            }
+    
+            .toolbar-title {
+                color:  white !important;
+                text-align: left;
+            }
+    
+            .event-text {
+                padding: 8px !important;
+            }
+    
+            .price {
+                float: right;
+                padding: 2px;
+                border: solid 1px white;
+                border-radius: 3px;
+            }
+    
+        }
+    
 }
