--- a/src/components/favorite-events/favorite-events.scss
+++ b/src/components/favorite-events/favorite-events.scss
@@ -1,4 +1,4 @@
-page-favorite-events {
+favorite-events-feed {
         .card {
             margin: 0 !important;
             width: calc(100% - 8px) !important;
