resume upload with AWS implemented

--- a/src/components/header/header.html
+++ b/src/components/header/header.html
@@ -2,7 +2,7 @@
 
   <ion-navbar>
   <ion-buttons start>
-     <button ion-button icon-only (click)="presentModal()"  >
+     <button ion-button icon-only (click)="presentMenu()"  >
       <ion-icon color="dark" name="ios-menu-outline"></ion-icon>
      </button>
 </ion-buttons>
