--- a/src/pages/menu/menu.scss
+++ b/src/pages/menu/menu.scss
@@ -1,15 +1,21 @@
 page-menu {
-    // img{
-    //     width: 120px;
-    //     height: 120px;
-    //     border-radius: 50%;
-    //     border: 4px solid black;
-    // }
+    .profile-picture-buttons {
+        button {
+            font-size: 24px;
+            padding: 10px;
+
+            ion-icon {
+                margin-right: 10px;
+                font-size: 24px;
+            }
+        }
+    }
 
     img {
-        border-radius: 50%;
+        // border-radius: 50%;
         width: 50%;
         height: 50%;
+        border: solid 3px black;
     }
     button.back-button {
         -webkit-transform: none !important; 
