Login and landing page

--- a/src/components/events/events.scss
+++ b/src/components/events/events.scss
@@ -43,11 +43,11 @@ events-feed {
 
         .capacity {
             float: right;
-            width: 36px;
+            width: 30px;
             text-align: center;
             border: solid 2px white;
             border-radius: 50%;
-            padding: 5px;
+            padding: 5px 0 5px 0;
             vertical-align: middle;
         }
 
