--- a/src/pages/menu/menu.scss
+++ b/src/pages/menu/menu.scss
@@ -12,10 +12,10 @@ page-menu {
     }
 
     img {
-        // border-radius: 50%;
-        width: 50%;
-        height: 50%;
-        border: solid 3px black;
+        border-radius: 50%;
+        width: 150px;
+        height: 150px;
+        border: solid 1px black;
     }
     button.back-button {
         -webkit-transform: none !important; 
