--- a/src/pages/references/references.scss
+++ b/src/pages/references/references.scss
@@ -6,13 +6,13 @@ page-references {
     }
 
     .submit {
-        width: 80%;
-        left: 10%;
+        width: 60%;
+        left: 20%;
         border-radius: 25px;
-        background: green;
+        background: black;
         color: white;
-        font-size: 28px !important;
-        padding: 25px !important;
+        font-size: 20px !important;
+        padding: 20px !important;
     }
 
     .back-button {
