--- a/src/pages/register/register.scss
+++ b/src/pages/register/register.scss
@@ -13,13 +13,28 @@ page-register {
      ion-navbar.toolbar{
         border:none !important
     }
-.toolbar-title.toolbar-title-ios{
-font-family:"Lobster";
-font-size: 2.8em;
- color:#ff4081;
-}
+// .toolbar-title.toolbar-title-ios{
+// font-family:"Lobster";
+// font-size: 2.8em;
+//  color:#ff4081;
+// }
  
+ion-list {
+    margin-top: 10px !important;
+}
+ion-item {
+    margin-top: 10px !important;
+    margin-bottom: 10px !important;
+    border-bottom: solid 0.5px #666666 !important;
+}
 
+ion-input {
+    border: none !important;
+}
+
+ion-navbar {
+    background-color: lightgray;
+}
 
   .list.list-ios{
       margin-top:15%;
@@ -83,4 +98,13 @@ span.line-through:before{
     color: #969FAA;
 }
 
+
+.login-button {
+    position: fixed !important;
+    bottom:  0;
+    border-radius: 0;
+    padding-bottom: 60px;
+    padding-top: 30px;
+    background-color:#666666 !important;
+}
 }
