Device id related changes

--- a/src/components/resume/resume.scss
+++ b/src/components/resume/resume.scss
@@ -3,5 +3,10 @@ resume {
         ion-label {
             margin: 0 !important;
         }
+
+        .sub-text {
+            font-size: 12px;
+            color: gray;
+        }
     }
 }
