--- a/src/components/resume/resume.html
+++ b/src/components/resume/resume.html
@@ -28,10 +28,12 @@ View Resume
   <ion-list-header *ngIf="!resumeUrl" (click)="uploadResume()">
       <ion-icon name="cloud-upload"></ion-icon>
       Upload Resume
+      <div class="sub-text">The file name shouldn't contain space</div>
     </ion-list-header>
   <ion-item (click)="uploadResume()" *ngIf="resumeUrl">
       <ion-icon name="cloud-upload"></ion-icon>
       Replace Resume
+      <div class="sub-text">The file name shouldn't contain space</div>
       </ion-item>
 </ion-list>
 </ion-content>
