--- a/src/components/favorite-jobs/favorite-jobs.html
+++ b/src/components/favorite-jobs/favorite-jobs.html
@@ -9,7 +9,7 @@
       </ion-item>
       <ion-item>
           <ion-avatar >
-              <img src = "{{job.imgURL}}">
+              <img src = "{{job.imgUrl}}">
               </ion-avatar>
       </ion-item>
         <ion-item text-wrap >
