--- a/src/components/header/header.html
+++ b/src/components/header/header.html
@@ -13,9 +13,9 @@
       <ion-icon color="danger" name="notifications-outline" *ngIf="unreadNotificationCount > 0"></ion-icon>
       
      </button>
-     <!-- <span *ngIf="unreadNotificationCount > 0" class="count" style="color: white;
-      background-color: red; padding:2px; font-size: 2px; position: relative; left: -10px;
-      border-radius: 50%;">{{unreadNotificationCount}}</span>   -->
+     <span *ngIf="unreadNotificationCount > 0" class="count" style="color: white;
+      background-color: red; padding:2px; font-size: 8px; position: relative; left: -10px;
+      border-radius: 50%;">{{unreadNotificationCount}}</span>  
      <button ion-button icon-only>
       <ion-icon color="dark" name="ios-mail-outline"></ion-icon>
      </button>
