--- a/src/components/jobs/jobs.html
+++ b/src/components/jobs/jobs.html
@@ -6,7 +6,7 @@
     <img src="{{item.bannerImgURL}}"/>
     <ion-item class="featured-job">
    <ion-avatar item-left>
-     <img src="{{item.imgURL}}">
+     <img src="{{item.imgUrl}}">
    </ion-avatar>
    <h2>{{item.jobTitle}}</h2>
    <p>{{item.company}}</p>
@@ -26,7 +26,7 @@
       <ion-item>
 
       <ion-avatar item-left>
-          <img src = "{{job.imgURL}}">
+          <img src = "{{job.imgUrl}}">
           </ion-avatar>
          <ion-grid>
           <ion-row>
