--- a/src/pages/notifications-settings/notifications-settings.scss
+++ b/src/pages/notifications-settings/notifications-settings.scss
@@ -4,4 +4,9 @@ page-notifications-settings {
         color: darkgrey;
         
     }
+    button.back-button {
+        -webkit-transform: none !important; 
+         transform: none !important; 
+    }
+
 }
