--- a/src/pages/users/users.scss
+++ b/src/pages/users/users.scss
@@ -1,3 +1,13 @@
 page-users {
+    button.back-button {
+        -webkit-transform: none !important; 
+         transform: none !important; 
+    }
 
+    ion-avatar {
+        img {
+            height: 40px !important;
+            width: 40px !important;
+        }
+    }
 }
