--- a/src/pages/contacts/contacts.scss
+++ b/src/pages/contacts/contacts.scss
@@ -1,3 +1,7 @@
 page-contacts {
+    button.back-button {
+        -webkit-transform: none !important; 
+         transform: none !important; 
+    }
 
 }
