groups - add and edit

--- a/src/pages/contacts/contacts.scss
+++ b/src/pages/contacts/contacts.scss
@@ -11,4 +11,11 @@ page-contacts {
             width: 40px !important;
         }
     }
+
+    ion-item {
+        h3 {
+            display: inline;
+            
+        }
+    }
 }
