--- a/src/pages/groupcontacts/groupcontacts.scss
+++ b/src/pages/groupcontacts/groupcontacts.scss
@@ -1,3 +1,21 @@
 page-groupcontacts {
+    button.back-button {
+        -webkit-transform: none !important; 
+         transform: none !important; 
+    }
+
+    ion-avatar {
+        img {
+            height: 30px !important;
+            width: 30px !important;
+        }
+    }
+
+    ion-item {
+        h3 {
+            display: inline;
+            
+        }
+    }
 
 }
