--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -31,10 +31,10 @@ ion-navbar.toolbar {
     border-bottom: 3px solid white;
 }
 
-ion-avatar>img {
-    width: 60px !important;
-    height: 60px !important;
-}
+// ion-avatar>img {
+//     width: 60px !important;
+//     height: 60px !important;
+// }
 
 .tabs-ios .tab-button {
     color: #444;
