Event related bug fix. Testing paypal integration

--- a/src/components/events/events.html
+++ b/src/components/events/events.html
@@ -10,7 +10,8 @@
 <ion-row>
                     <ion-col col-9 class="event-name">{{event.name}}</ion-col>
                     <ion-col col-3 >
-                        <span class="capacity">{{(event.capacity && event.attendance) ? event.capacity - event.attendance : 0}}</span>
+                        
+                        <span class="capacity">{{event.capacity - event.attendance}}</span>
                     </ion-col>
                 </ion-row>
                 
@@ -26,7 +27,7 @@
                 <br>
                 <div>
                     <span>
-                        {{event.date}} 
+                        {{event.date | date}} 
                     </span>
                     <span *ngIf="event.price === 0" class="price">Free</span>
                     <span *ngIf="event.price > 0" class="price">${{event.price}}</span>
