--- a/src/components/header/header.html
+++ b/src/components/header/header.html
@@ -16,9 +16,9 @@
      <span *ngIf="unreadNotificationCount > 0" class="count" style="color: white;
       background-color: red; padding:2px; font-size: 8px; position: relative; left: -10px;
       border-radius: 50%;">{{unreadNotificationCount}}</span>  
-     <button ion-button icon-only>
+     <!-- <button ion-button icon-only>
       <ion-icon color="dark" name="ios-mail-outline"></ion-icon>
-     </button>
+     </button> -->
 </ion-buttons>
   </ion-navbar>
 
