--- a/src/components/resume/resume.scss
+++ b/src/components/resume/resume.scss
@@ -4,6 +4,15 @@ resume {
             margin: 0 !important;
         }
 
+
+        .select-file {
+            border-radius: 4px;
+            background-color: #387ef5;
+            color: #fff;
+            margin: 0.4rem 0.2rem;
+            font-size: 1.3rem;
+        }
+        
         .sub-text {
             font-size: 12px;
             color: gray;
