--- a/src/pages/menu/menu.scss
+++ b/src/pages/menu/menu.scss
@@ -11,6 +11,14 @@ page-menu {
          transform: none !important; 
     }
 
+    .select-file {
+        border-radius: 4px;
+        background-color: #387ef5;
+        color: #fff;
+        margin: 0.4rem 0.2rem;
+        font-size: 1.3rem;
+    }
+
     .profile-picture-buttons {
         button {
             font-size: 24px;
