--- a/src/pages/contactchats/contactchats.scss
+++ b/src/pages/contactchats/contactchats.scss
@@ -40,4 +40,13 @@ page-contactchats {
     .chatwindow {
         padding-bottom: 70px;
     }
+
+
+    .select-file {
+        border-radius: 4px;
+        background-color: #387ef5;
+        color: #fff;
+        margin: 0.4rem 0.2rem;
+        font-size: 1.3rem;
+    }
 }
