image orientation issue

--- a/src/pages/contactchats/contactchats.scss
+++ b/src/pages/contactchats/contactchats.scss
@@ -8,6 +8,7 @@ page-contactchats {
         img {
             height: 30px !important;
             width: 30px !important;
+            image-orientation: from-image;
         }
     }
 
