--- a/src/pages/groupchat/groupchat.scss
+++ b/src/pages/groupchat/groupchat.scss
@@ -21,6 +21,7 @@ page-groupchat {
             position: absolute;
             right: 0 !important;
             margin-bottom: 10px;
+            image-orientation: from-image;
         }
         div {
             margin-top: 35px !important;
@@ -36,6 +37,7 @@ page-groupchat {
             width: 30px !important;
             display: block !important;
             margin-bottom: 10px;
+            image-orientation: from-image;
         }
         div {
             margin-top: 35px !important;
