--- a/src/pages/menu/menu.scss
+++ b/src/pages/menu/menu.scss
@@ -5,6 +5,7 @@ page-menu {
         width: 150px;
         height: 150px;
         border: solid 1px black;
+        image-orientation: from-image;
     }
     button.back-button {
         -webkit-transform: none !important; 
