--- a/src/pages/newgroup/newgroup.scss
+++ b/src/pages/newgroup/newgroup.scss
@@ -46,6 +46,7 @@ page-newgroup {
         img {
             height: 30px !important;
             width: 30px !important;
+            image-orientation: from-image;
         }
     }
 
